# species-etiquettes

./: .gitignore  README.md  pyproject.toml
data/: Cassidinae_Python_cleaned.csv
src/: analyze_template.py  create_pdf.py  create_unit_tray_labels.py
